[gd_scene load_steps=49 format=3 uid="uid://vu2yk3702nqa"]

[ext_resource type="Texture2D" uid="uid://o7cveg0tptjd" path="res://art/zombie-sheet.png" id="1_555a7"]
[ext_resource type="Shader" uid="uid://b424xgnciqpij" path="res://shaders/flash.tres" id="1_c0m4n"]
[ext_resource type="Script" path="res://characters/enemies/zombie.gd" id="1_n530s"]
[ext_resource type="PackedScene" uid="uid://cf2uo2vqacma" path="res://items/healing_potion.tscn" id="2_elptb"]
[ext_resource type="Script" path="res://characters/enemies/scripts/drop_data.gd" id="3_egy5t"]
[ext_resource type="Script" path="res://characters/stats/health_stats.gd" id="4_2epim"]
[ext_resource type="PackedScene" uid="uid://bc5cd83ugexa6" path="res://items/coin.tscn" id="4_3yg3p"]
[ext_resource type="Script" path="res://characters/enemies/scripts/state_machine/enemy_state_machine.gd" id="5_8gf42"]
[ext_resource type="PackedScene" uid="uid://10cog181cq5u" path="res://characters/melee_attack_zone.tscn" id="5_tx2j2"]
[ext_resource type="Script" path="res://characters/enemies/scripts/state_machine/enemy_wandering_state.gd" id="6_ew186"]
[ext_resource type="Script" path="res://characters/enemies/scripts/state_machine/enemy_prepare_attack_state.gd" id="7_7051v"]
[ext_resource type="Script" path="res://characters/enemies/scripts/state_machine/enemy_attacking_state.gd" id="8_rx2jd"]
[ext_resource type="Script" path="res://characters/stats/movement_stats.gd" id="8_t7k5g"]
[ext_resource type="Script" path="res://characters/stats/attack_stats.gd" id="9_c4noe"]
[ext_resource type="Script" path="res://characters/enemies/scripts/state_machine/enemy_iddle_state.gd" id="9_hdm4t"]

[sub_resource type="Resource" id="Resource_djrj2"]
resource_local_to_scene = true
script = ExtResource("3_egy5t")
item = ExtResource("2_elptb")
probability = 15.0
count_randomization_type = 0
min_amount = 1
max_amount = 1
mean_amount = 1
amount_deviation = 1

[sub_resource type="Resource" id="Resource_em1ro"]
resource_local_to_scene = true
script = ExtResource("3_egy5t")
item = ExtResource("4_3yg3p")
probability = 100.0
count_randomization_type = 0
min_amount = 1
max_amount = 5
mean_amount = 2
amount_deviation = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3007r"]
resource_local_to_scene = true
shader = ExtResource("1_c0m4n")
shader_parameter/Enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4r1w"]
atlas = ExtResource("1_555a7")
region = Rect2(258, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8vmk"]
atlas = ExtResource("1_555a7")
region = Rect2(301, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_lighm"]
atlas = ExtResource("1_555a7")
region = Rect2(344, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntd5q"]
atlas = ExtResource("1_555a7")
region = Rect2(387, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_mej42"]
atlas = ExtResource("1_555a7")
region = Rect2(430, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcvgb"]
atlas = ExtResource("1_555a7")
region = Rect2(473, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxpf1"]
atlas = ExtResource("1_555a7")
region = Rect2(516, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdlgk"]
atlas = ExtResource("1_555a7")
region = Rect2(559, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlobp"]
atlas = ExtResource("1_555a7")
region = Rect2(0, 165, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba4qk"]
atlas = ExtResource("1_555a7")
region = Rect2(43, 165, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhert"]
atlas = ExtResource("1_555a7")
region = Rect2(86, 165, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3sod"]
atlas = ExtResource("1_555a7")
region = Rect2(0, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxb43"]
atlas = ExtResource("1_555a7")
region = Rect2(43, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrl7d"]
atlas = ExtResource("1_555a7")
region = Rect2(86, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl71g"]
atlas = ExtResource("1_555a7")
region = Rect2(129, 0, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m26m"]
atlas = ExtResource("1_555a7")
region = Rect2(0, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_kao1h"]
atlas = ExtResource("1_555a7")
region = Rect2(43, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvt5m"]
atlas = ExtResource("1_555a7")
region = Rect2(86, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6hpq"]
atlas = ExtResource("1_555a7")
region = Rect2(129, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g7jv"]
atlas = ExtResource("1_555a7")
region = Rect2(172, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc64t"]
atlas = ExtResource("1_555a7")
region = Rect2(215, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcjch"]
atlas = ExtResource("1_555a7")
region = Rect2(258, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsdx8"]
atlas = ExtResource("1_555a7")
region = Rect2(301, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2c5o"]
atlas = ExtResource("1_555a7")
region = Rect2(344, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v350"]
atlas = ExtResource("1_555a7")
region = Rect2(387, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhj2r"]
atlas = ExtResource("1_555a7")
region = Rect2(430, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee053"]
atlas = ExtResource("1_555a7")
region = Rect2(473, 605, 43, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l373"]
atlas = ExtResource("1_555a7")
region = Rect2(516, 605, 43, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_llsic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4r1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8vmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lighm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntd5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mej42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxpf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdlgk")
}],
"loop": false,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlobp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba4qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhert")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhert")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba4qk")
}],
"loop": true,
"name": &"iddle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3sod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxb43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrl7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl71g")
}],
"loop": false,
"name": &"prepare_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m26m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kao1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvt5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6hpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc64t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcjch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsdx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2c5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v350")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhj2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee053")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l373")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d50cn"]
radius = 21.0
height = 102.0

[node name="Zombie" type="CharacterBody2D" node_paths=PackedStringArray("attack_stats", "health_stats", "movement_stats", "melee_attack_zone", "animated_sprite") groups=["Damageble", "Enemy"]]
z_index = -10
collision_layer = 4
collision_mask = 3
script = ExtResource("1_n530s")
drops = Array[ExtResource("3_egy5t")]([SubResource("Resource_djrj2"), SubResource("Resource_em1ro")])
attack_stats = NodePath("AttackStats")
health_stats = NodePath("HealthStats")
movement_stats = NodePath("MovementStats")
melee_attack_zone = NodePath("MeleeAttackZone")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state", "debug_label")]
script = ExtResource("5_8gf42")
state = NodePath("EnemyWanderingState")
debug_label = NodePath("../Label")

[node name="EnemyWanderingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("vision_cast", "actor", "animated_sprite")]
script = ExtResource("6_ew186")
vision_cast = NodePath("../../Sight")
actor = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="EnemyPrepareAttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_stats", "actor", "animated_sprite")]
script = ExtResource("7_7051v")
attack_stats = NodePath("../../AttackStats")
actor = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="EnemyAttackingState" type="Node" parent="StateMachine" node_paths=PackedStringArray("melee_attack_zone", "actor", "animated_sprite")]
script = ExtResource("8_rx2jd")
melee_attack_zone = NodePath("../../MeleeAttackZone")
actor = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="EnemyIddleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("sight", "actor", "animated_sprite")]
script = ExtResource("9_hdm4t")
sight = NodePath("../../Sight")
wait_time_sec = 1.0
actor = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="HealthStats" type="Node" parent="."]
script = ExtResource("4_2epim")
current_health = 100

[node name="MovementStats" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("8_t7k5g")
character = NodePath("..")
max_speed = 50.0
moving_direction = 0

[node name="AttackStats" type="Node" parent="."]
script = ExtResource("9_c4noe")
basic_damage = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3007r")
position = Vector2(0, -8)
scale = Vector2(2.3, 2.3)
sprite_frames = SubResource("SpriteFrames_llsic")
animation = &"attack"
autoplay = "iddle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d50cn")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -41.0
offset_top = -77.0
offset_right = -1.0
offset_bottom = -54.0
scale = Vector2(1.2, 1)
horizontal_alignment = 1

[node name="MeleeAttackZone" parent="." node_paths=PackedStringArray("attack_stats") instance=ExtResource("5_tx2j2")]
position = Vector2(-39, 0)
scale = Vector2(1, 2.24)
collision_mask = 2
attack_stats = NodePath("../AttackStats")

[node name="Sight" type="RayCast2D" parent="."]
target_position = Vector2(-48, 0)
collision_mask = 6
